added rainbow function

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <div class="title">Click To Draw!</div>
         <div class="content">
             <div class="buttons">
-                <button>Clear</button>
+                <button onclick="clearGrid()">Clear</button>
                 <button onclick="changeColour('black')">Black</button>
                 <button onclick="changeColour('white')">Eraser</button>
-                <button onclick="changeColour()">Rainbow</button>
+                <button onclick="changeColour('rainbow')">Rainbow</button>
             </div>
             <div class="grid"></div>
         </div>
