--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
     <footer>
         chrlie-w
     </footer>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
